-  Verknüpfte Belege auch für Dialogbuchungen (neuer Reiter)
-  DMS: Anzeige von Versionen verbessert: Angezeigt wird immer nur die neueste
   Version einer Datei. Weitere Versionen lassen sich durch Ausklappen
   anzeigen. Dies gilt nun auch für die Dokument-Typen Anhänge und Bilder, bei
   denen zuvor nur die neueste Version angezeigt wurde.

2022-03-02 - Release 3.6.0

Größere neue Features:

- Mobilvariante Handyfotos für Lieferscheine

  Die neue mobile Variante von kivitendo kann Handyfotos an Lieferscheine hinzufügen.
  Das Feature setzt ein mobiles Endgerät voraus, aufgrund dessen wird ein passendes
  CSS-Design im Android-Stil geladen und über die Suche nach einem Lieferschein lassen
  sich aufgenommen Fotos hochladen. Die Funktion benötigt ein aktiviertes DMS innerhalb
  von kivitendo.

- Lieferanten-Beistelllieferschein

  Über den Lieferantenworkflow ist es jetzt möglich
  einen Lieferantenausgangslieferschein zu erstellen (beigestellte Ware).
  Mit diesem neuen Belegtyp können dann für einen Lieferanten Waren ausgelagert,
  sprich mitgegeben werden. Damit kann der Anwendungsfall: Lieferant veredelt
  eigene Erzeugnisse weiter oder erbringt Dienstleistungen mit selbst erzeugter
  Ware abgebildet werden.
  Dieser Belegtyp wurde vollständig unabhängig vom alten Lieferschein-Code ent-
  wickelt (MVC Modell, wie beim neueren Auftrag) und enthält die Option
  Belegart (Einkauf oder Verkauf) sowie Lagerrichtung (Ein- oder Auslagern) beliebig
  zu kombinieren.

- Shopware 6 Schnittstelle

  kivitendo unterstützt jetzt die neuere Shopware Version 6 als Alternative
  zum bisherigen Shopware 5 Konnektor. Die meisten Funktionen sind analog zum
  Shopware 5 Konnektor implementiert. Admins können sich im Detail im Perl-Doc
  über die Implementierung informieren (perldoc SL/ShopConnector/Shopware6.pm).

- Anzahlungs- und Schlussrechnung konform nach deutschem Steuerrecht
