@@ -1754,6 +1754,7 @@ $self->{texts} = {
   'If enabled purchase and sales records cannot be saved if no transaction description has been entered.' => '',
   'If enabled sales invoices created using OpenDocument/OASIS format will include data for Swiss QR-Bill creation.' => '',
   'If enabled the record links view starts always from the sales order including all sublevels' => '',
+  'If enabled try to overrule the brower\'s back button to prevent double booking of sales invoices.' => '',
   'If enabled, when saving parts the partsgroup must be not be empty.' => '',
   'If item not found, allow creation of new item' => '',
   'If left empty the default sender from the kivitendo configuration will be used (key \'email_from\' in section \'periodic_invoices\'; current value: #1).' => '',
@@ -2631,6 +2632,7 @@ $self->{texts} = {
   'Preset email text for sales invoices with direct debit' => '',
   'Preset email text for sales orders' => '',
   'Preset email text for sales quotations' => '',
+  'Prevent browser\'s back button in sales invoices' => '',
   'Preview'                     => '',
   'Preview Mode'                => '',
   'Previous month'              => '',
